# cosmico-webinar

./: .gitignore  README.md  pyproject.toml
cosmico_webinar/: __init__.py  __main__.py  constants.py  eventbrite.py  streamyard.py
cosmico_webinar/commands/: download.py  helpers.py
